<resources>
    <string name="app_name">FunED</string>
    <string name="instructions_toolbar_title">FunED fun test</string>
    <string name="instructions_title">Important instructions</string>
    <string name="test_instructions">1. The test will contain both multiple choice questions as well as short answer questions.\n\n2. The test timer will start as soon as you enter the test.\n\n3. You will not be able to pause the test once you start.\n\n4. Please make sure you submit your test after you are done. In case you do not submit your test your answers will not be considered.\n\n5. In case you don\'t submit your test and the timer expires your test will be auto submitted.</string>
    <string name="enter_test">Enter Test</string>
    <string name="preparing_test">Preparing test…</string>
    <string name="total_marks">%s Marks</string>
    <string name="test_duration">%s mins</string>
    <string name="short_answer_hint">You can either write an answer for this question or attach an image of your solution or both</string>
    <string name="answer_image_label">Please click/upload image</string>
    <string name="test_question_number">Q No. %s</string>
    <string name="test_question_marks">Marks: %s</string>
    <string name="permission_title">App Permissions</string>
    <string name="permission_camera">Please grant the permissions to your camera. You will not be able to capture your answer without it</string>
    <string name="permission_gallery">Please grant the permissions to your gallery. You will not be able to select the picture of your answer without it</string>
    <string name="permission_camera_denied">You will not be able to use camera to capture your answers. You can always go to settings and grant this permission</string>
    <string name="permission_gallery_denied">You will not be able to upload picture of your answer from your gallery. You can always go to settings and grant this permission</string>
    <string name="submit_title">Submit?</string>
    <string name="submit_message">Your answers will be submitted. Are you sure you want to proceed?</string>
    <string name="time_up_message">Time up! Your test has been auto-submitted. You will be re-directed to summary page</string>
    <string name="submission_title">Your answers</string>
    <string name="submission_answer">Your answer:</string>
    <string name="all_next">Next</string>
    <string name="all_prev">Prev</string>
    <string name="all_subimt">Submit</string>
    <string name="all_retry">Retry</string>
    <string name="all_no_network">Please check your internet connection and try again</string>
    <string name="all_generic_error">Something went wrong. Please try again</string>
    <string name="all_try_again">There seems to be an error. Please click below to try again</string>
    <string name="all_ok">OK</string>
    <string name="all_cancel">Cancel</string>
</resources>