<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.dialogs.ConfirmationDialogFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogTitleTv"
        android:layout_width="@dimen/all_0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/all_18sp"
        android:fontFamily="@font/opensans_bold"
        android:layout_margin="@dimen/all_16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/permission_title"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogMessageTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/all_18sp"
        android:fontFamily="@font/opensans_regular"
        android:layout_margin="@dimen/all_16dp"
        app:layout_constraintTop_toBottomOf="@+id/dialogTitleTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/permission_camera"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogPositiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_16dp"
        android:padding="@dimen/all_16dp"
        android:background="?attr/selectableItemBackground"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/all_18sp"
        android:fontFamily="@font/opensans_regular"
        app:layout_constraintTop_toBottomOf="@+id/dialogMessageTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/all_ok"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogNegativeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_16dp"
        android:padding="@dimen/all_16dp"
        android:background="?attr/selectableItemBackground"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/all_18sp"
        android:fontFamily="@font/opensans_regular"
        app:layout_constraintTop_toBottomOf="@id/dialogMessageTv"
        app:layout_constraintEnd_toStartOf="@+id/dialogPositiveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/all_cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>