<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.instruction.InstructionsActivity">

    <include
        android:id="@+id/instructionsToolbar"
        layout="@layout/all_appbar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/all_0dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionsToolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subjectTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/all_16dp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/preparing_test"
                android:textColor="@color/black"
                android:textSize="@dimen/all_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/retryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:background="@color/yellow_700"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center"
                android:text="@string/all_retry"
                android:textColor="@color/black"
                android:padding="@dimen/all_8dp"
                android:layout_marginTop="@dimen/all_16dp"
                app:layout_constraintTop_toBottomOf="@+id/subjectTv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/middleParent"
                android:layout_width="@dimen/all_0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/all_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subjectTv">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/centerVerticalMiddle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/marksTv"
                    android:layout_width="@dimen/all_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/all_16dp"
                    android:layout_marginEnd="@dimen/all_16dp"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="start"
                    tools:text="10 Marks"
                    android:textColor="@color/black"
                    android:textSize="@dimen/all_16sp"
                    app:layout_constraintEnd_toStartOf="@+id/centerVerticalMiddle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/durationTv"
                    android:layout_width="@dimen/all_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/all_16dp"
                    android:layout_marginEnd="@dimen/all_16dp"
                    android:fontFamily="@font/opensans_regular"
                    android:gravity="end"
                    tools:text="30 mins"
                    android:textColor="@color/black"
                    android:textSize="@dimen/all_16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/centerVerticalMiddle"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/instructionsParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/all_16dp"
                app:cardCornerRadius="@dimen/all_20dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/middleParent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/all_16dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/instructionTitleTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/opensans_bold"
                        android:text="@string/instructions_title"
                        android:textColor="@color/black"
                        android:textSize="@dimen/all_16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/instructionsTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/all_16dp"
                        android:fontFamily="@font/opensans_regular"
                        android:text="@string/test_instructions"
                        android:textColor="@color/black"
                        android:textSize="@dimen/all_16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/instructionTitleTv" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/instructionsTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/all_16dp"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                tools:text="0:30"
                android:visibility="gone"
                android:textColor="@color/black"
                android:textSize="@dimen/all_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructionsParent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/enterTestButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/all_16dp"
                android:background="@color/yellow_700"
                android:enabled="false"
                android:alpha="0.3"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center"
                android:text="@string/enter_test"
                android:textColor="@color/black"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/instructionsTimer" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/instructionsPb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.FunED.ProgressBar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>